ajout d'un second titre

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <h1>Mon Titre</h1>
+    <h1>Mon 2nd Titre</h1>
+    
     <a href = "" > Nouveau bouton</a>
     <p>text 1</p>
     <p>text 2</p>
